// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 dDCaZY"
  height={null}
  id="Standard"
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "0 0 0 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "0 0 0 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 222222"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 222222
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "0 0 0 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "0 0 0 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 444444444444444444"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 444444444444444444
      </label>
    </span>
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "width": "15em",
    }
  }
>
  <div
    className="Flex__FlexWrapper-sc-7b3s7m-0 dDCaZY"
    height={null}
    id="Spacing Content"
    overflow={null}
    width={null}
  >
    <div
      style={
        Object {
          "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
        }
      }
    >
      <span
        className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
        id={null}
        label="Tag 1"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 1
        </label>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
        }
      }
    >
      <span
        className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
        id={null}
        label="Tag 222222"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 222222
        </label>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
        }
      }
    >
      <span
        className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
        id={null}
        label="Tag 33333333333"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 33333333333
        </label>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
        }
      }
    >
      <span
        className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
        id={null}
        label="Tag 444444444444444444"
        onClick={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
          cursor="default"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor={null}
          letterSpacing=".5px"
        >
          Tag 444444444444444444
        </label>
      </span>
    </div>
  </div>
</div>
`;

exports[` 3`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 ihKjAh"
  height={null}
  id="Center Justify"
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 222222"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 222222
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 444444444444444444"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 444444444444444444
      </label>
    </span>
  </div>
</div>
`;

exports[` 4`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 htOzOr"
  height={null}
  id="Right Justify"
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 222222"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 222222
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 444444444444444444"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 444444444444444444
      </label>
    </span>
  </div>
</div>
`;

exports[` 5`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 dDCaZY"
  height={null}
  id="Center (Default) Align"
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 fHwjBj Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_217"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
        id={null}
        onClick={null}
      >
        <div
          style={
            Object {
              "width": "10em",
            }
          }
        >
          Different size in content
        </div>
      </section>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
</div>
`;

exports[` 6`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 hRxRtZ"
  height={null}
  id="Top Align"
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 fHwjBj Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_218"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
        id={null}
        onClick={null}
      >
        <div
          style={
            Object {
              "width": "10em",
            }
          }
        >
          Different size in content
        </div>
      </section>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
</div>
`;

exports[` 7`] = `
<div
  className="Flex__FlexWrapper-sc-7b3s7m-0 fpNHjS"
  height={null}
  id="Bottom Align"
  overflow={null}
  width={null}
>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 1"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 1
      </label>
    </span>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <div
      className="CardWrapper__StyledCardWrapper-meln7c-0 fHwjBj Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg"
      href={null}
      id="storyshots_219"
      media=""
      onClick={null}
      placeholder="{ Card }"
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
        id={null}
        onClick={null}
      >
        <div
          style={
            Object {
              "width": "10em",
            }
          }
        >
          Different size in content
        </div>
      </section>
    </div>
  </div>
  <div
    style={
      Object {
        "margin": "calc(0.3em / 2) 0.4em calc(0.3em / 2) 0",
      }
    }
  >
    <span
      className="Tag__TagContainer-sc-128kb3h-0 gqnZqx"
      id={null}
      label="Tag 33333333333"
      onClick={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 eXOMIR"
        cursor="default"
        fontSize="0.875rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Tag 33333333333
      </label>
    </span>
  </div>
</div>
`;
